welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:15: error: unclosed comment
/*do {
^Poucet:2: error: Missing closing brace `}' assumed here
var x:Int=0;
^Poucet:4: error: expected class or object definition
avance();
^Poucet:5: error: expected class or object definition
x= x+1;
^Poucet:7: error: expected class or object definition
do {
^